Bug 489330 - Technical debt : Number instantiations
Save resources by using the Number factories (valueOf) rather than
creating new instances.

Change-Id: I285439a41bb102a88d893527f23366444ccafdbe
Signed-off-by: Mickael Istria <mistria@redhat.com>